hphp/hack/test/ifc/check/private_functions.php.exp
File "private_functions.php", line 30, characters 3-7:
Context-implicit policy leaks into `lump` via `lump'1`. (Typing[4380])
File "private_functions.php", line 30, characters 3-7:
Context-implicit policy leaks into `\Exception` via `lump'1`. (Typing[4380])
File "private_functions.php", line 30, characters 3-7:
Context-implicit policy leaks into `lump` via `\Exception'1`. (Typing[4380])
File "private_functions.php", line 30, characters 3-7:
Context-implicit policy leaks into `\Exception` via `\Exception'1`. (Typing[4380])
File "private_functions.php", line 40, characters 3-12:
Context-implicit policy leaks into `ret` via `lump'1`. (Typing[4380])
File "private_functions.php", line 37, characters 5-14:
Another program point contributing to the leakage
File "private_functions.php", line 40, characters 3-12:
Context-implicit policy leaks into `ret` via `\Exception'1`. (Typing[4380])
File "private_functions.php", line 37, characters 5-14:
Another program point contributing to the leakage
File "private_functions.php", line 40, characters 3-12:
Context-implicit policy leaks into `ret` via `$f'1`. (Typing[4380])
File "private_functions.php", line 37, characters 5-14:
Another program point contributing to the leakage
File "private_functions.php", line 40, characters 3-12:
Context-implicit policy leaks into `ret` via `$f`. (Typing[4380])
File "private_functions.php", line 37, characters 5-14:
Another program point contributing to the leakage
